# pywalk

./: .gitignore  CMakeLists.txt  Readme.md  random_walk.ipynb
include/: pywalk.h  stat.h  walk.h
src/: pywalk.cpp  stat.cpp  walk.cpp
tests/: CMakeLists.txt  run_test.py  test.cpp
